# Altair-C-Basic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TESTING.md
compatibility_tests/ahl_games/: ACTION_GAMES_QUICK_REFERENCE.txt  README.md  SCENARIOS_SUMMARY.md  SPORTS_GAMES_SUMMARY.md  game_registry.json  gen_golden.py  generate_carddice_goldens.sh  generate_remaining_goldens.sh  generate_sports_goldens.sh
compatibility_tests/ahl_games/games/: guess.bas  hilo.bas
compatibility_tests/ahl_games/golden/23matches/: scenario_01.golden  scenario_02.golden
compatibility_tests/ahl_games/golden/3dplot/: scenario_01.golden
compatibility_tests/ahl_games/golden/3dtictactoe/: scenario_01.golden
compatibility_tests/ahl_games/golden/aceyducey/: scenario_01_chicken_on_narrow.golden  scenario_02_lose_on_narrow.golden
compatibility_tests/ahl_games/golden/amazing/: scenario_01_small_maze.golden  scenario_02_medium_maze.golden  scenario_03_large_maze.golden  scenario_04_invalid_dimensions.golden
compatibility_tests/ahl_games/golden/awari/: scenario_03_alternating.golden
compatibility_tests/ahl_games/golden/bagels/: scenario_01_win_fast.golden  scenario_02_systematic.golden
compatibility_tests/ahl_games/golden/banner/: scenario_01_simple_hello.golden  scenario_02_large_hi.golden  scenario_03_numbers.golden  scenario_04_mixed_text.golden  scenario_05_single_letter.golden  scenario_06_question_mark.golden
compatibility_tests/ahl_games/golden/basketball/: scenario_01_close_game.golden  scenario_02_varied_strategy.golden  scenario_03_aggressive_press.golden
compatibility_tests/ahl_games/golden/battle/: scenario_01.golden
compatibility_tests/ahl_games/golden/bombardment/: scenario_01_quick_win.golden  scenario_02_systematic_search.golden  scenario_03_loss_game.golden  scenario_04_corner_positions.golden
compatibility_tests/ahl_games/golden/bombsaway/: scenario_01.golden  scenario_02.golden  scenario_03.golden
compatibility_tests/ahl_games/golden/bowling/: scenario_01_single_player.golden  scenario_02_two_players.golden
compatibility_tests/ahl_games/golden/boxing/: scenario_01_uppercut_master.golden  scenario_02_mixed_strategy.golden  scenario_03_jabber.golden
compatibility_tests/ahl_games/golden/bug/: scenario_01_no_instructions.golden  scenario_02_with_instructions.golden  scenario_03_show_pictures.golden
compatibility_tests/ahl_games/golden/bullfight/: scenario_02_cape_moves.golden  scenario_03_with_instructions.golden  scenario_04_gored_continue.golden
compatibility_tests/ahl_games/golden/bullseye/: scenario_01.golden
compatibility_tests/ahl_games/golden/bunny/: scenario_01.golden
compatibility_tests/ahl_games/golden/buzzword/: scenario_01.golden  scenario_02.golden
compatibility_tests/ahl_games/golden/calendar/: scenario_01.golden
compatibility_tests/ahl_games/golden/checkers/: scenario_01.golden
compatibility_tests/ahl_games/golden/chemist/: scenario_01_perfect_answers.golden  scenario_02_close_enough.golden  scenario_03_nine_failures.golden  scenario_04_mixed_results.golden
compatibility_tests/ahl_games/golden/chief/: scenario_01_correct_answer.golden  scenario_02_wrong_then_verify.golden  scenario_03_lightning_bolt.golden  scenario_04_not_ready.golden
compatibility_tests/ahl_games/golden/chomp/: scenario_01_simple_2x2_game.golden  scenario_02_player2_forced_poison.golden  scenario_03_larger_board.golden  scenario_04_illegal_moves.golden  scenario_05_quick_game.golden
compatibility_tests/ahl_games/golden/combat/: scenario_01_balanced_attack.golden  scenario_02_army_focused.golden  scenario_03_air_force_attack.golden  (+1 more)
compatibility_tests/ahl_games/scripts/: ahl_test_runner.py  download_games.py  generate_golden_simple.py  generate_loop_game_golden.py  run_simh_game.exp
compatibility_tests/golden/: 02_numeric_functions.golden  04_string_functions.golden  05_comparisons.golden  06_rnd_sequence.golden  07_for_next.golden  08_arrays.golden  09_gosub_return.golden  10_data_read.golden  12_print_format.golden  14_if_then.golden
compatibility_tests/hamurabi_test/: run_hamurabi_test.py  run_simh_hamurabi.exp  scenario_03_slow_decline.input  scenario_04_conservative.input  scenario_05_land_baron.input  scenario_06_max_planting.input  scenario_08_sell_land.input  scenario_09_population.input
compatibility_tests/programs/: 01_arithmetic.bas  02_numeric_functions.bas  03_trig_functions.bas  04_string_functions.bas  05_comparisons.bas  06_rnd_sequence.bas  07_for_next.bas  08_arrays.bas  09_gosub_return.bas  10_data_read.bas  11_on_goto.bas  12_print_format.bas  13_boundary_values.bas  14_if_then.bas  15_input_handling.bas
compatibility_tests/results/: 01_arithmetic.c_output  01_arithmetic.diff  02_numeric_functions.c_output  02_numeric_functions.diff  03_trig_functions.actual  03_trig_functions.c_output  03_trig_functions.diff  04_string_functions.c_output  04_string_functions.diff  05_comparisons.c_output  05_comparisons.diff  06_rnd_sequence.actual  06_rnd_sequence.c_output  06_rnd_sequence.diff  07_for_next.c_output  07_for_next.diff  08_arrays.c_output  08_arrays.diff  09_gosub_return.c_output  09_gosub_return.diff  10_data_read.c_output  10_data_read.diff  11_on_goto.c_output  11_on_goto.diff  12_print_format.actual  12_print_format.c_output  12_print_format.diff  13_boundary_values.actual  13_boundary_values.c_output  13_boundary_values.diff  14_if_then.c_output  14_if_then.diff
compatibility_tests/scripts/: generate_golden.exp  run_c_test.sh  run_simh_single.exp  run_simh_test.exp  test_harness.py
include/basic/: basic.h  errors.h  mbf.h  tokens.h
src/: main.c
src/core/: evaluator.c  interpreter.c  parser.c  tokenizer.c
src/functions/: numeric.c  string.c
src/io/: terminal.c
src/math/: mbf.c  mbf_arith.c  mbf_trig.c  rnd.c
src/memory/: arrays.c  program.c  strings.c  variables.c
src/statements/: flow.c  io.c  misc.c
test_programs/: edge_case_tests.bas
tests/: CMakeLists.txt  fast_rnd_1000.exp  gen_rnd_c.c  test_harness.h
tests/unit/: test_mbf.c  test_memory.c  test_parser.c  test_rnd.c  test_tokenizer.c
(+571 files in other folders)
